# simple-event-system

./: README.md  pyproject.toml
simple_event_system/: AbstractEvent.py  AbstractGlobalData.py  AbstractPlugin.py  EventSystem.py  GetAllConcreteSubclass.py  GlobalDataMgr.py  __init__.py
